# zk-benchmarks

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  ZK-Containers.md  benchmarks.xlsx
.github/workflows/: manual_workflow.yml  workflow.yml
benchmarks/: README.md  run-all-benchmarks.sh
benchmarks/add/: README.md  benchmark.cu  run.sh  ve_mod_mult.cuh
benchmarks/c++/add/: run.sh
benchmarks/c++/add/.devcontainer/: Dockerfile  devcontainer.json
benchmarks/c++/msm/: CMakeLists.txt  benchmark.cu  run.sh
benchmarks/c++/multiply/: README.md  run.sh
benchmarks/c++/multiply/.devcontainer/: devcontainer.json
benchmarks/c++/ntt/: CMakeLists.txt  run.sh
benchmarks/c++/ntt/.devcontainer/: devcontainer.json
benchmarks/c++/poseidon/: CMakeLists.txt  README.md
benchmarks/c++/poseidon/.devcontainer/: Dockerfile  devcontainer.json
benchmarks/msm/: benchmark.cu  benchmark.json  run.sh
benchmarks/msm/.devcontainer/: Dockerfile  devcontainer.json
benchmarks/multiply/: CMakeLists.txt  README.md  benchmark.cu  run.sh
benchmarks/ntt/: README.md  benchmark.cu  benchmark.json  benchmark.sql  run.sh
benchmarks/poseidon-example-zk-container-benchmark/: benchmark.cu  run.sh
benchmarks/poseidon-example-zk-container-benchmark/.devcontainer/: README.md
benchmarks/rust/msm/: Cargo.toml  README.md
benchmarks/rust/msm/benches/: my_benchmark.rs
runner/: Dockerfile  start-runner.sh
scripts/: README.md  add-grostl.sh  add-msm.sh  add-multiply.sh  add-ntt.sh  add-poseidon.sh  cli.sh  example-grostl-data.sh  example-msm-data.sh  example-multiply-data.sh  example-ntt-data.sh  example-poseidon-data.sh  view-add.sh  view-grostl.sh  view-msm.sh  view-multiply.sh  view-ntt.sh  view-poseidon.sh
scripts/reports/: README.md  report-all.py
zkbench/: .env.example  Cargo.toml  README.md  my.env
zkbench/src/: lib.rs  main.rs  main.rs.old  main.rs.test
zkbench/tests/: integration_test.rs
zkbenchmark-docker/: Dockerfile  README.md  docker-compose.yml  initial-data.sql  pg_hba.conf  pivots.sql
zkbenchmark-docker/init.sql/: 000 - tables.sql  001 - guest_user.sql  001 - read-only user.sql  002 - grostl-table.sql
