#[workspace]
#members = [
#    "zkbench",
#]

[package]
name = "zkbench"
version = "0.1.0"
edition = "2021"

#authors = [ "Ingonyama" ]
#description = "A library for benchmarking ICICLE applications"
#homepage = "https://www.ingonyama.com"
#repository = "https://github.com/ingonyama-zk/benchmarks"

#[lib]
#name = "zkbench"
#path = "src/lib.rs"

#[[bin]]
#name = "zkbench"
#path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1.20.0", features = ["rt", "macros","rt-multi-thread"]}
structopt = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15.0"
git2 = "0.17"
#zkbench = { path = "." }



[dev-dependencies]
tokio-test = "0.4"