[package]
name = "msm-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
zkbench = { path = "../../../zkbench" }
serde_json = "1.0"
git2 = "0.17"
icicle-cuda-runtime = { path = "/home/stas/Projects/ingonyama-zk/icicle/wrappers/rust/icicle-cuda-runtime" }
icicle-core = { path = "/home/stas/Projects/ingonyama-zk/icicle/wrappers/rust/icicle-core" }
icicle-bn254 = { path = "/home/stas/Projects/ingonyama-zk/icicle/wrappers/rust/icicle-curves/icicle-bn254", features = ["g2"] }
icicle-bls12-377 = { path = "/home/stas/Projects/ingonyama-zk/icicle/wrappers/rust/icicle-curves/icicle-bls12-377" }
ark-bn254 = { version = "0.4.0", optional = true}
ark-bls12-377 = { version = "0.4.0", optional = true}
ark-ec = { version = "0.4.0", optional = true}
clap = { version = "<=4.4.12", features = ["derive"] }

[features]
arkworks = ["ark-bn254", "ark-bls12-377", "ark-ec", "icicle-core/arkworks", "icicle-bn254/arkworks", "icicle-bls12-377/arkworks"]
profile = []
g2 = []


[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false
